--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,24 +4,27 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #111111;
+  --link-color: #1e90ff;
+  --text-color: #e0e0e0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffffff;
-    --foreground: #000000;
+    --background: #111111;
+    --foreground: #ffffff;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+/*body {*/
+/*  color: var(--foreground);*/
+/*  background: var(--background);*/
+/*  font-family: Arial, Helvetica, sans-serif;*/
+/*}*/
 
 @layer utilities {
-  /*.text-balance {*/
-  /*  text-wrap: balance;*/
-  /*}*/
+  .container {
+    max-width: 80%;
+    margin: 0 auto;
+  }
 }
