--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,29 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #111111;
-  --link-color: #1e90ff;
-  --text-color: #e0e0e0;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #111111;
-    --foreground: #ffffff;
-  }
-}
-
-/*body {*/
-/*  color: var(--foreground);*/
-/*  background: var(--background);*/
-/*  font-family: Arial, Helvetica, sans-serif;*/
+/*:root {*/
+/*  --background: #ffffff;*/
+/*  --foreground: #111111;*/
+/*  --link-color: #1e90ff;*/
+/*  --text-color: #e0e0e0;*/
 /*}*/
 
-@layer utilities {
-  .container {
-    max-width: 80%;
-    margin: 0 auto;
-  }
-}
+/*@media (prefers-color-scheme: dark) {*/
+/*  :root {*/
+/*    --background: #111111;*/
+/*    --foreground: #ffffff;*/
+/*  }*/
+/*}*/
+
+/*!*body {*!*/
+/*!*  color: var(--foreground);*!*/
+/*!*  background: var(--background);*!*/
+/*!*  font-family: Arial, Helvetica, sans-serif;*!*/
+/*!*}*!*/
+
+/*@layer utilities {*/
+/*  .container {*/
+/*    max-width: 80%;*/
+/*    margin: 0 auto;*/
+/*  }*/
+/*}*/
